--- a/aboutme/wwr/site-plan-rafting.html
+++ b/aboutme/wwr/site-plan-rafting.html
@@ -121,7 +121,10 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>[Page 2]
+      <img src="images/wirefram1.png" alt="wireframe1">
+      <img src="images/wirefram2.png" alt="wireframe2">
+    </h3>
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
