--- a/aboutme/wwr/site-plan-rafting.html
+++ b/aboutme/wwr/site-plan-rafting.html
@@ -124,6 +124,8 @@
     <h3>[Page 2]
       <img src="images/wirefram1.png" alt="wireframe1">
       <img src="images/wirefram2.png" alt="wireframe2">
+      <img src="images/rafting53_600.jpg" alt="pic to use">
+    
     </h3>
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
