--- a/aboutme/wwr/index.html
+++ b/aboutme/wwr/index.html
@@ -17,7 +17,7 @@
             <a href="index.html">Home</a>
             <a href="#">Page 2</a>
             <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html"></a>
+            <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
     <div id="hero">
@@ -27,7 +27,7 @@
 <section id="hero-msg">
     <h1 class="home-title">Have An Adventure</h1>
     <h4>Make Memories with Dry Oar</h4>
-    <div class='button-box'>
+    <div class="button-box">
         <a class="book" href="rates.html">Book Now</a>
     </div>
 </section>
@@ -36,7 +36,7 @@
         <section class="rivers-card">
             <img class="card-img" src="images/rivers.jpeg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon">
-            <h2>Camping</h2>
+            <h2>River</h2>
         </section>
         <section class="camping-card">
             <img class="card-img" src="images/camping.jpeg" alt="tent in mountains">
