--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -10,9 +10,9 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
+      <h1>[Truman Art Museum] Site Plan</h1>
       <h2>Micah Truman</h2>
-      <h2>WDD 130-[04]</h2>
+      <h2>WDD 130-04</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -64,10 +64,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: Merriweather  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Open Sans  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
