personal site content

--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -127,29 +127,35 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        [Some information that is necessary to complete any action the site offers is information about times and pricing, I feel like this is the most important thing to do. Also, a way people can get tickets for the museum, they ca neither do it online or in person, and people will want to know pricing. This will help them decide if they want to keep scrolling on the website and look for other features that can help them. I think I will need to have a lot of navigation tabs and a lot of paragraph tabs.]
+      </p>
+      <p>
+        Different types of activities that people will want to complete on my site will to be to easily find the dates and time for the website, be able to get tickets for certain exabits, look at featured collections and artist, to donate to the museum, to be able to sign up for news and updates through an email.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/arthall1.jpg" alt="image for homepage" width="500" height="600">
+        <br>
+        <img src="images/arthall2.jpg" alt="image for homepage" width="500" height="600">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Blog</h3>
       <p>
-        [Written copy for the Page 2 here]
+        [They will want to learn more about art history and more about why art is important for our society. For example, maybe I’ll but a blog page with art history they can read about, for the featured exbibits and they will be more educated when they go and look at the featured artwork.]
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+      <p>Images for the Blog</p>
+        <img src="images/classicart.jpg" alt="image for page" width="500" height="600">
+        <br>
+        <img src="images/classicart2.jpg" alt="image for page" width="500" height="600">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>FAQ</h3>
       <p>
-        [Written copy for the Page 3 here]
+        [Some questions people might ask are what are the days and times that the museum is open? How much does it cost to go for the day? Is there a dress code for this museum? Is any of the artwork for sale? Where does the art come from? Are there tour guides? If so, are they free or do they cost money? If they cost money, how much? Are there different languages they translate the tours in? Are there any painting classes to sign up for? Is there a shop to buy art, like a souvenir shop but for art? What types of art are in this museum? Whats the collections? ]
       </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <p>Images for the FAQ</p>
+        <img src="images/artpics.jpg" alt="image for page3" width="500" height="600">
+        <br>
+        <img src="images/Wide Art hall.jpeg" alt="image for page3" width="500" height="600">
 
       </ul>
       <hr>
