--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -167,21 +167,27 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        [this the home front page when they first get to the webisite]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/homepage1.png" alt="home page wireframe">
+      <img src="images/homepage2.png" alt="home page wireframe">
+      <img src="images/homepage3.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Blog</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/subblog1.png" alt="page 2 wireframe">
+      <img src="images/subblog2.png" alt="page 2 wireframe">
+      <img src="images/subblog3.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>FAQ</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/faq1.png" alt="page 3 wireframe">
+      <img src="images/faq2.png" alt="page 3 wireframe">
+      
     </main>
   </body>
 
