--- a/aboutme/wwr/contactus.html
+++ b/aboutme/wwr/contactus.html
@@ -21,8 +21,10 @@
         </nav>
     </header>
    <div class="introP">
-   <h1 class="contact-title">Contact Us Today</h1>
+  
+    <h1 class="contact-title">Contact Us Today</h1>
    <p class="contact-para">We love to hear and feedback from our amazing customers and users, yall are the best! <br> If you have any comments, concerns, or questions, please send us an email and we will get back to you as soon as we can!</p>
+   <img class="pic-for-asss" src="images/rafting53_600.jpg" alt="picpic" width="400px" height="300px">
 
    <div class="contact-box">
     <div class="contact-left">
@@ -81,6 +83,8 @@
 
     </div>
 </div>
+
+
 </div>
 
 
