--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -22,6 +22,8 @@
                 <li><a href="#">FAQ</a></li>
                 
                 <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Art Shop</a></li>
+                <li><a href="#">Art Blog</a></li>
             </ul>
             <form class="search-form">
                 <input type="text" placeholder="Search">
@@ -36,20 +38,24 @@
 
 <section class="art-exhib">
     <h2>Current art exhibitions</h2>
+    <!-- <img src="" alt=""> -->
     <p>Exhibit name</p>
 </section>
 <section>
     <h2>Featured Events</h2>
+        <!-- <img src="" alt=""> -->
     <p>Name of event</p>
 </section>
 
 
 <section class="art-shop">
     <h2>Art shop</h2>
+        <!-- <img src="" alt=""> -->
     <p>View the Collection</p>
 </section>
 <section class="art-his-blog">
     <h2>Art history blog</h2>
+        <!-- <img src="" alt=""> -->
     <p>Read here now</p>
 </section>
 <hr>
