contact us done

--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -8,6 +8,7 @@
     <title>Personal site - HOme Page</title>
 </head>
 <body>
+
     <header class="header" id="myHeader">
        
             <a id="logo_link" href="index.html">
@@ -20,9 +21,7 @@
                 <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">FAQ</a></li>
-                
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Art Shop</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
                 <li><a href="#">Art Blog</a></li>
             </ul>
             <form class="search-form">
@@ -41,18 +40,7 @@
     <!-- <img src="" alt=""> -->
     <p>Exhibit name</p>
 </section>
-<section>
-    <h2>Featured Events</h2>
-        <!-- <img src="" alt=""> -->
-    <p>Name of event</p>
-</section>
 
-
-<section class="art-shop">
-    <h2>Art shop</h2>
-        <!-- <img src="" alt=""> -->
-    <p>View the Collection</p>
-</section>
 <section class="art-his-blog">
     <h2>Art history blog</h2>
         <!-- <img src="" alt=""> -->
@@ -73,7 +61,7 @@
     <img class="footer-logo" src="images/Gold Luxury Paint King Logo-2.png" alt="footer logo" width="100px" height="100px">
     <h3>TRUMAN ART MUESEUM &copy;</h3>
     <h3><a href="site-plan.html">Site Plan</a></h3>
-    <h3><a href="#">Contact Us</a></h3>
+    <h3><a href="contactus.html">Contact Us</a></h3>
     <h3><a href="#">FAQ</a></h3>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
