--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -38,13 +38,13 @@
 <section class="art-exhib">
     <h2>Current art exhibitions</h2>
     <!-- <img src="" alt=""> -->
-    <p>Exhibit name</p>
+    <p class="section-1">Exhibit name</p>
 </section>
 
 <section class="art-his-blog">
     <h2>Art history blog</h2>
         <!-- <img src="" alt=""> -->
-    <p>Read here now</p>
+    <p class="section-2">Read here now</p>
 </section>
 <hr>
 <section class="email-link">
