--- a/personalsite/contactus.html
+++ b/personalsite/contactus.html
@@ -20,7 +20,7 @@
             <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#">FAQ</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
             <li><a href="#">Art Blog</a></li>
         </ul>
         <form class="search-form">
@@ -38,7 +38,63 @@
   
     <h1 class="contact-title">Contact Us Today</h1>
    <p class="contact-para">If you have any comments, concerns, or questions, please send us an email and we will get back to you as soon as we can!</p>
-   <img class="pic-for-asss" src="images/classicart.jpg" alt="picpic" width="400px" height="300px">
+   
+
+   
+   <!-- Slideshow container -->
+   <div class="slideshow-container-contact">
+
+   <!-- Full-width images with number and caption text -->    
+    <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="images/classicart.jpg" width="400px" height="300px">
+        <div class="text">The Great Halls</div>
+      </div>
+    
+      <div class="mySlides fade">
+        <div class="numbertext">2 / 3</div>
+        <img src="images/classicart2.jpg" width="400px" height="300px">
+        <div class="text">Amazing Sculptures</div>
+      </div>
+    
+      <div class="mySlides fade">
+        <div class="numbertext">3 / 3</div>
+        <img src="images/arthall2.jpg" width="400px" height="300px">
+        <div class="text">Modern Art Gallery</div>
+      </div>
+
+   </div>
+ <!-- Next and previous buttons -->
+ <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+ <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+<!-- The dots/circles -->
+<div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span> 
+    <span class="dot" onclick="currentSlide(2)"></span> 
+    <span class="dot" onclick="currentSlide(3)"></span> 
+  </div>
+  <script>
+   let slideIndex = 0;
+showSlides();
+
+function showSlides() {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none"; 
+  }
+  slideIndex++;
+  if (slideIndex > slides.length) {slideIndex = 1} 
+  slides[slideIndex-1].style.display = "block"; 
+  setTimeout(showSlides, 2000); // Change image every 2 seconds
+}
+    </script>
+
+<!-- <img class="pic-for-asss" src="images/classicart.jpg" alt="picpic" width="400px" height="300px">  -->
+
+   
 
    <div class="contact-box">
     <div class="contact-left">
@@ -102,18 +158,11 @@
 </div>
 
 
-
-
-
-
-
-
-
 <footer>
     <img class="footer-logo" src="images/Gold Luxury Paint King Logo-2.png" alt="footer logo" width="100px" height="100px">
     <h3>TRUMAN ART MUESEUM &copy;</h3>
     <h3><a href="site-plan.html">Site Plan</a></h3>
-    <h3><a href="#">Contact Us</a></h3>
+    <h3><a href="contactus.html">Contact Us</a></h3>
     <h3><a href="#">FAQ</a></h3>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
