--- a/personalsite/contactus.html
+++ b/personalsite/contactus.html
@@ -8,27 +8,18 @@
     <title>FAQ page</title>
 </head>
 <body>
-    <header class="header" id="myHeader">
-       
-        <a id="logo_link" href="index.html">
-        <!-- <img class="logo" src="images/Gold Luxury Paint King Logo-2.png" alt="art logo" width="100px" height="100px"> -->
-        </a>
-        <nav class="menu">
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="images/Gold Luxury Paint King Logo-2.png" alt="art logo" width="100px" height="100px">
-                </a>
+    <header>
+        <nav class="header">
             <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="contactus.html">Contact Us</a></li>
-            <li><a href="#">Art Blog</a></li>
-        </ul>
-        <form class="search-form">
-            <input type="text" placeholder="Search">
-            <button class="search-top">Search</button>
-        </form>
+               <li> <a id="logo_link" href="index.html">
+                    <img class="logo" src="images/Gold Luxury Paint King Logo-2.png" alt="art logo" width="100px" height="100px">
+                </a></li>
+      <li> <a href="index.html">Home</a></li> 
+      <li><a href="#">FAQ</a></li> 
+      <li><a href="contactus.html">Contact Us</a></li> 
+      <li><a href="#">Art Blog</a></li> 
+    </ul>
         </nav>
-
 </header>
 
 
