added part of home page

--- a/personalsite/contactus.html
+++ b/personalsite/contactus.html
@@ -148,7 +148,15 @@ function showSlides() {
 
 </div>
 
+<hr>
+<section class="email-link">
+    <h1 class="sign-up">Sign up for news and updates</h1>
+    <form class="email-search">
+        <input type="mail" placeholder="Enter your email ...">
+        <button class="enter-email">Sign up</button>
+    </form>
 
+</section>
 <footer>
     <img class="footer-logo" src="images/Gold Luxury Paint King Logo-2.png" alt="footer logo" width="100px" height="100px">
     <h3>TRUMAN ART MUESEUM &copy;</h3>
