--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -20,7 +20,13 @@
               <li><a href="#">FAQ</a></li> 
               <li><a href="contactus.html">Contact Us</a></li> 
               <li><a href="#">Art Blog</a></li> 
+             
+              <form class="email-look">
+                <input type="text" placeholder="Search ...">
+                <button class="enter-words">Search</button>
+            </form>
             </ul>
+
                 </nav>
             
 </header>
