--- a/personalsite/contactus.html
+++ b/personalsite/contactus.html
@@ -18,6 +18,10 @@
       <li><a href="#">FAQ</a></li> 
       <li><a href="contactus.html">Contact Us</a></li> 
       <li><a href="#">Art Blog</a></li> 
+      <form class="email-look">
+        <input type="text" placeholder="Search ...">
+        <button class="enter-words">Search</button>
+    </form>
     </ul>
         </nav>
 </header>
