--- a/personalsite/contactus.html
+++ b/personalsite/contactus.html
@@ -57,19 +57,25 @@
         <img src="images/arthall2.jpg" width="400px" height="300px">
         <div class="text">Modern Art Gallery</div>
       </div>
-
-   </div>
- <!-- Next and previous buttons -->
- <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
- <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br>
 <!-- The dots/circles -->
-<div style="text-align:center">
+<div  class="dots" style="text-align:center">
     <span class="dot" onclick="currentSlide(1)"></span> 
     <span class="dot" onclick="currentSlide(2)"></span> 
     <span class="dot" onclick="currentSlide(3)"></span> 
   </div>
+   
+ <!-- Next and previous buttons -->
+ <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+ <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+</div>
+<br>
+<!-- The dots/circles
+<div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span> 
+    <span class="dot" onclick="currentSlide(2)"></span> 
+    <span class="dot" onclick="currentSlide(3)"></span> 
+  </div> -->
   <script>
    let slideIndex = 0;
 showSlides();
