--- a/personalsite/contactus.html
+++ b/personalsite/contactus.html
@@ -15,9 +15,8 @@
                     <img class="logo" src="images/Gold Luxury Paint King Logo-2.png" alt="art logo" width="100px" height="100px">
                 </a></li>
       <li> <a href="index.html">Home</a></li> 
-      <li><a href="#">FAQ</a></li> 
       <li><a href="contactus.html">Contact Us</a></li> 
-      <li><a href="#">Art Blog</a></li> 
+      <li><a href="artblog.html">ART BLOG</a></li> 
       <form class="email-look">
         <input type="text" placeholder="Search ...">
         <button class="enter-words">Search</button>
@@ -70,12 +69,7 @@
 </div>
 </div>
 <br>
-<!-- The dots/circles
-<div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span> 
-    <span class="dot" onclick="currentSlide(2)"></span> 
-    <span class="dot" onclick="currentSlide(3)"></span> 
-  </div> -->
+
   <script>
    let slideIndex = 0;
 showSlides();
@@ -172,7 +166,7 @@ function showSlides() {
     <h3>TRUMAN ART MUESEUM &copy;</h3>
     <h3><a href="site-plan.html">Site Plan</a></h3>
     <h3><a href="contactus.html">Contact Us</a></h3>
-    <h3><a href="#">FAQ</a></h3>
+    <h3><a href="artblog.html">ART BLOG</a></h3>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="fb icon">
