--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -17,9 +17,8 @@
                             <img class="logo" src="images/Gold Luxury Paint King Logo-2.png" alt="art logo" width="100px" height="100px">
                         </a></li>
               <li> <a href="index.html">Home</a></li> 
-              <li><a href="#">FAQ</a></li> 
               <li><a href="contactus.html">Contact Us</a></li> 
-              <li><a href="#">Art Blog</a></li> 
+              <li><a href="artblog.html">Art Blog</a></li> 
              
               <form class="email-look">
                 <input type="text" placeholder="Search ...">
@@ -35,9 +34,9 @@
 
 
 <section class="art-exhib">
-    <h2>Current art exhibitions</h2>
+    <h2>Have Any Question?</h2>
     <!-- <img src="" alt=""> -->
-    <p class="section-1">Exhibit name</p>
+    <p class="section-1">Click Here</p>
 </section>
 
 <section class="art-his-blog">
@@ -61,7 +60,7 @@
     <h3>TRUMAN ART MUESEUM &copy;</h3>
     <h3><a href="site-plan.html">Site Plan</a></h3>
     <h3><a href="contactus.html">Contact Us</a></h3>
-    <h3><a href="#">FAQ</a></h3>
+    <h3><a href="artblog.html">ART BLOG</a></h3>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="fb icon">
