--- a/personalsite/contactus.html
+++ b/personalsite/contactus.html
@@ -14,9 +14,9 @@
                <li> <a id="logo_link" href="index.html">
                     <img class="logo" src="images/Gold Luxury Paint King Logo-2.png" alt="art logo" width="100px" height="100px">
                 </a></li>
-      <li> <a href="index.html">Home</a></li> 
-      <li><a href="contactus.html">Contact Us</a></li> 
-      <li><a href="artblog.html">ART BLOG</a></li> 
+      <li> <a class="home-nav" href="index.html">Home</a></li> 
+      <li><a class="contact-nav" href="contactus.html">Contact Us</a></li> 
+      <li><a class="blog-nav" href="artblog.html">ART BLOG</a></li> 
       <form class="email-look">
         <input type="text" placeholder="Search ...">
         <button class="enter-words">Search</button>
