--- a/personalsite/artblog.html
+++ b/personalsite/artblog.html
@@ -15,9 +15,9 @@
                <li> <a id="logo_link" href="index.html">
                     <img class="logo" src="images/Gold Luxury Paint King Logo-2.png" alt="art logo" width="100px" height="100px">
                 </a></li>
-      <li> <a href="index.html">Home</a></li> 
-      <li><a href="contactus.html">Contact Us</a></li> 
-      <li><a href="artblog.html">Art Blog</a></li> 
+      <li> <a class="home-nav" href="index.html">Home</a></li> 
+      <li><a class="contact-nav" href="contactus.html">Contact Us</a></li> 
+      <li><a class="blog-nav" href="artblog.html">Art Blog</a></li> 
      
       <form class="email-look">
         <input type="text" placeholder="Search ...">
