working on home

--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -17,9 +17,9 @@
                        <li> <a id="logo_link" href="index.html">
                             <img class="logo" src="images/Gold Luxury Paint King Logo-2.png" alt="art logo" width="100px" height="100px">
                         </a></li>
-              <li> <a class="home-nav" href="index.html">Home</a></li> 
-              <li><a class="contact-nav" href="contactus.html">Contact Us</a></li> 
-              <li><a class="blog-nav" href="artblog.html">Art Blog</a></li> 
+              <li> <a class=" btn home-nav" href="index.html">Home</a></li> 
+              <li><a class=" btn contact-nav" href="contactus.html">Contact Us</a></li> 
+              <li><a class=" btn blog-nav" href="artblog.html">Art Blog</a></li> 
              
               <form class="email-look">
                 <input type="text" placeholder="Search ...">
@@ -112,18 +112,26 @@ function showSlides(n) {
 
 
 
-<section class="art-exhib">
-    <h2>Have Any Question?</h2>
-   <img src="images/paintingclasses.jpg" alt="painting" width="500px" height="500px">
-    <p class="section-1">Click Here</p>
-</section>
+<div class="card1">
+  <div class="container-5">
+    <h2><b>Have Any Questions?</b></h2>
+    <img src="images/paintingclasses.jpg" alt="painting" width="500px" height="500px">
+    <p class="click-1">Click here</p>
+  </div>
+</div>
+   
+   
 
-<section class="art-his-blog">
-    <h2>Art history blog</h2>
+
+  
+  <div class="card2">
+    <div class="container-6">
+      <h2><b>Learn Art History! </b></h2>
       <img src="images/arthall3.jpg" alt="art hall"  width="500px" height="500px">
-    <p class="section-2">Read here now</p>
-</section>
-
+      <p class="click-2">Click here</p>
+    </div>
+  </div>
+     
 
 
 
