--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -115,8 +115,10 @@ function showSlides(n) {
 <div class="card1">
   <div class="container-5">
     <h2><b>Have Any Questions?</b></h2>
+    <a href="contactus.html">
     <img src="images/paintingclasses.jpg" alt="painting" width="500px" height="500px">
-    <p class="click-1">Click here</p>
+    </a>
+    <p class="click-1">Click Image Above</p>
   </div>
 </div>
    
@@ -125,8 +127,10 @@ function showSlides(n) {
   <div class="card2">
     <div class="container-6">
       <h2><b>Learn Art History! </b></h2>
+      <a href="artblog.html">
       <img src="images/arthall3.jpg" alt="art hall"  width="500px" height="500px">
-      <p class="click-2">Click here</p>
+      </a>
+      <p class="click-2">Click Image Above</p>
     </div>
   </div>    
 
