--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -37,19 +37,19 @@
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade-home">
       <div class="numbertext-home">1 / 3</div>
-      <img src="images/artbigspace.jpeg" style="width:100%">
+      <img src="images/artbigspace.jpeg" alt="pictures" style="width:100%">
       <div class="text-h">Great Art Sculpture</div>
     </div>
   
     <div class="mySlides fade-home">
       <div class="numbertext-home">2 / 3</div>
-      <img src="images/Wide Art hall.jpeg" style="width:100%">
+      <img src="images/Wide Art hall.jpeg" alt="pictures" style="width:100%">
       <div class="text-h">The Great Paintings</div>
     </div>
   
     <div class="mySlides fade-home">
       <div class="numbertext-home">3 / 3</div>
-      <img src="images/Roomsart.jpeg" style="width:100%">
+      <img src="images/Roomsart.jpeg" alt="pictures" style="width:100%">
       <div class="text-h">Art of the Jewels</div>
     </div>
   
@@ -155,7 +155,7 @@ function showSlides(n) {
 <section class="email-link">
     <h1 class="sign-up">Sign up for news and updates</h1>
     <form class="email-search">
-        <input type="mail" placeholder="Enter your email ...">
+        <input type="email" placeholder="Enter your email ...">
         <button class="enter-email">Sign up</button>
     </form>
 
