final site done

--- a/personalsite/artblog.html
+++ b/personalsite/artblog.html
@@ -15,9 +15,9 @@
                <li> <a id="logo_link" href="index.html">
                     <img class="logo" src="images/Gold Luxury Paint King Logo-2.png" alt="art logo" width="100px" height="100px">
                 </a></li>
-      <li> <a class="home-nav" href="index.html">Home</a></li> 
-      <li><a class="contact-nav" href="contactus.html">Contact Us</a></li> 
-      <li><a class="blog-nav" href="artblog.html">Art Blog</a></li> 
+      <li> <a class="btn home-nav" href="index.html">Home</a></li> 
+      <li><a class="btn contact-nav" href="contactus.html">Contact Us</a></li> 
+      <li><a class="btn blog-nav" href="artblog.html">Art Blog</a></li> 
      
       <form class="email-look">
         <input type="text" placeholder="Search ...">
@@ -69,6 +69,16 @@
 
 
 
+<hr>
+
+<section class="email-link">
+    <h1 class="sign-up">Sign up for news and updates</h1>
+    <form class="email-search">
+        <input type="mail" placeholder="Enter your email ...">
+        <button class="enter-email">Sign up</button>
+    </form>
+
+</section>
 
 
 
