--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -155,7 +155,7 @@ function showSlides(n) {
 <section class="email-link">
     <h1 class="sign-up">Sign up for news and updates</h1>
     <form class="email-search">
-        <input type="email" placeholder="Enter your email ...">
+        <input type="mail" placeholder="Enter your email ...">
         <button class="enter-email">Sign up</button>
     </form>
 
